--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,3 +1,11 @@
-.campus-title{
-    color:blue;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #111d5e;
+    font-family: "source serif pro", serif;
+    font-weight: 700
 }
