--- a/src/app/feature/sidebar/sidebar.component.html
+++ b/src/app/feature/sidebar/sidebar.component.html
@@ -1,4 +1,3 @@
-<!-- src/app/sidebar/sidebar.component.html -->
 <div class="sidebar-main sidebar-menu-one sidebar-expand-md sidebar-color fixed-left">
     <div class="mobile-sidebar-header d-md-none">
         <div class="header-logo">
@@ -8,73 +7,90 @@
     <div class="sidebar-menu-content">
         <ul class="nav nav-sidebar-menu sidebar-toggle-view">
             <!-- dashboard -->
-            <li class="nav-item">
-                <a href="admin-index.html" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
+            <li class="nav-item ">
+                <a href="admin-index.html" class="nav-link "><i
+                        class="flaticon-dashboard"></i><span>Dashboard</span></a>
             </li>
-            <!-- registration -->
+            <!--  registration -->
             <li class="nav-item sidebar-nav-item">
                 <a href="#" class="nav-link"><i class="flaticon-checklist"></i><span>Registration</span></a>
-                <ul class="nav sub-group-menu" *ngIf="submenuStates[0]">
+                <ul class="nav sub-group-menu">
                     <li class="nav-item">
-                        <a href="Guest-registration.html" class="nav-link"><span>Guest Registration</span></a>
+                        <a href="Guest-registration.html" class="nav-link"><span>Guest
+                            Registration</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="manage-Guest.html" class="nav-link"><span>Manage Guest</span></a>
+                        <a href="manage-Guest.html" class="nav-link"><span>Manage
+                            Guest</span></a>
                     </li>
                 </ul>
             </li>
-            <!-- rooms -->
+            <!-- rooms-->
             <li class="nav-item sidebar-nav-item">
-                <a href="#" class="nav-link"><i class="flaticon-multiple-users-silhouette"></i><span>Rooms</span></a>
-                <ul class="nav sub-group-menu" *ngIf="submenuStates[1]">
+                <a href="#" class="nav-link"><i
+                        class="flaticon-multiple-users-silhouette"></i><span>Rooms</span></a>
+                <ul class="nav sub-group-menu">
                     <li class="nav-item">
-                        <a href="add-a-room.html" class="nav-link"><i class="fas fa-angle-right"></i>Add a Room</a>
+                        <a href="add-a-room.html" class="nav-link"><i class="fas fa-angle-right"></i>Add a
+                            Room</a>
                     </li>
                     <li class="nav-item">
-                        <a href="manage-rooms.html" class="nav-link"><i class="fas fa-angle-right"></i>Manage Rooms</a>
+                        <a href="manage-rooms.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Manage Rooms</a>
                     </li>
                 </ul>
             </li>
 
             <!-- cafeteria -->
             <li class="nav-item sidebar-nav-item">
-                <a href="#" class="nav-link" (click)="toggleSubMenu(0)"><i class="flaticon-menu-1"></i><span>Cafeteria</span></a>
-                <ul class="nav sub-group-menu" *ngIf="submenuStates[0]">
+                <a href="#" class="nav-link"><i class="flaticon-menu-1"></i><span>Cafeteria</span></a>
+                <ul class="nav sub-group-menu">
                     <li class="nav-item">
-                        <a href="account.html" class="nav-link"><i class="fas fa-angle-right"></i>My Account</a>
+                        <a href="account.html" class="nav-link"><i class="fas fa-angle-right"></i>My
+                            Account</a>
                     </li>
                     <li class="nav-item">
-                        <a href="address-book.html" class="nav-link "><i class="fas fa-angle-right"></i>Address Book</a>
+                        <a href="address-book.html" class="nav-link "><i
+                                class="fas fa-angle-right"></i>Address Book</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="recent-order.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Recent Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a href="recent-order.html" class="nav-link"><i class="fas fa-angle-right"></i>Recent Orders</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="recent-reservations.html" class="nav-link"><i class="fas fa-angle-right"></i>Recent Reservations</a>
+                        <a href="recent-reservations.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Recent Reservations</a>
                     </li>
                 </ul>
             </li>
             <!-- Security access -->
             <li class="nav-item sidebar-nav-item">
-                <a href="#" class="nav-link" (click)="toggleSubMenu(1)"><i class="flaticon-user"></i><span>Security Access</span></a>
-                <ul class="nav sub-group-menu" *ngIf="submenuStates[1]">
+                <a href="#" class="nav-link"><i class="flaticon-user"></i><span>Security Access</span></a>
+                <ul class="nav sub-group-menu">
                     <li class="nav-item">
-                        <a href="Visitor-Registration.html" class="nav-link"><i class="fas fa-angle-right"></i>Registration</a>
+                        <a href="Visitor-Registration.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Registration</a>
                     </li>
                     <li class="nav-item">
-                        <a href="visit-information.html" class="nav-link "><i class="fas fa-angle-right"></i>Visit Information</a>
+                        <a href="visit-information.html" class="nav-link "><i
+                                class="fas fa-angle-right"></i>Visit Information</a>
                     </li>
+
                     <li class="nav-item">
-                        <a href="Visit- history.html" class="nav-link"><i class="fas fa-angle-right"></i>Visit History</a>
+                        <a href="Visit- history.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Visit History</a>
                     </li>
+
                 </ul>
             </li>
             <!-- Payment -->
             <li class="nav-item sidebar-nav-item">
-                <a href="#" class="nav-link" (click)="toggleSubMenu(2)"><i class="flaticon-open-book"></i><span>Payment</span></a>
-                <ul class="nav sub-group-menu" *ngIf="submenuStates[2]">
+                <a href="#" class="nav-link"><i class="flaticon-open-book"></i><span>Payment</span></a>
+                <ul class="nav sub-group-menu" style="display: block;">
                     <li class="nav-item">
-                        <a href="Transactions.html" class="nav-link"><i class="fas fa-angle-right"></i>Transactions</a>
+                        <a href="Transactions.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Transactions</a>
                     </li>
                     <li class="nav-item">
                         <a href="pay.html" class="nav-link "><i class="fas fa-angle-right"></i>Pay</a>
@@ -84,10 +100,11 @@
 
             <!-- complaint & Report -->
             <li class="nav-item sidebar-nav-item">
-                <a href="#" class="nav-link" (click)="toggleSubMenu(3)"><i class="flaticon-checklist"></i><span>Complaint</span></a>
-                <ul class="nav sub-group-menu" *ngIf="submenuStates[3]">
+                <a href="#" class="nav-link"><i class="flaticon-checklist"></i><span>Complaint</span></a>
+                <ul class="nav sub-group-menu">
                     <li class="nav-item">
-                        <a href="complaint.html" class="nav-link"><i class="fas fa-angle-right"></i>Complaint</a>
+                        <a href="complaint.html" class="nav-link"><i
+                                class="fas fa-angle-right"></i>Complaint</a>
                     </li>
                     <li class="nav-item">
                         <a href="Report.html" class="nav-link "><i class="fas fa-angle-right"></i>Report</a>
