--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,4 +1,1 @@
-<a routerLink="/feature/x" class="nav-link" >x</a><br>
-<a routerLink="/feature/y" class="nav-link" >y</a>
-
-<router-outlet></router-outlet>
+<app-report></app-report>
