--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,3 +1,7 @@
-<!-- 
-<app-report></app-report>
- -->
+<div><app-fheader></app-fheader></div>
+<div ><app-sidebar></app-sidebar></div>
+<div class="appside"><router-outlet></router-outlet></div>
+
+
+
+
