--- a/src/app/feature/add-a-room/add-a-room.component.html
+++ b/src/app/feature/add-a-room/add-a-room.component.html
@@ -35,8 +35,9 @@
 
 
                             <div class="col-12 form-group mg-t-8">
-                                <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Add
+                                <button type="submit"  onclick="addRoom()" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Add
                                     Room</button>
+                                    
                             </div>
                         </div>
                     </form>
